# uoink

./: .gitattributes  .gitignore  BACKLOG.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_USE.md  README.md  README_server.md  RENAME_FOLDER.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  STYLE.md  THIRD-PARTY-NOTICES.md  _platform.py  build-mac.sh  build.ps1  channels.py  claims.py  corpus_contract.py  corpus_intelligence.py  corpus_provider.py  engagement_contract.py  images.py  index.py  launch.bat  media_handoff.py  memory_layer.py  migrate_install.py  mobile_playlists.py  notes.py  openapi_bridge.py  page_extractor.py  podcasts.py  reddit_extractor.py  requirements-installer-lock.txt  requirements.txt  run-build.ps1  scripts.py  (+24 more)
.claude/: settings.local.json
.mcpb/: README.md  manifest.json
assets/: build_store_assets.py
build-prompts/: prompt-1-rebrand.md  prompt-2-corpus.md  prompt-3-destinations.md  prompt-4-polish.md  prompt-5-store-assets.md  prompt-6-commit.md
defaults/: style_anchors.json
docs/: MAC-BUILD-PLAN.md  backlog-review-notes.md  build-installer.md  corpus-read-contract-v1.md  extension-prelaunch-audit.md  mac-install.md  mcpb-bundle.md  migration-step0-characterization.md  privacy-policy.md  progress.md  schema.md  screenshot-list.md  security.md  setup-copy-revisions.md  store-listing.md  tier-2-contracts.md  uoink-memory.md  v2-api.md  v2-comment-intelligence.md  v2-hook-type.md  v2-mcp.md  v2-prelaunch-review.md  v2-smoke-test.md  (+3 more)
extension/: popup.js  (+18 more)
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
(+224 files in other folders)
